--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,17 +4,16 @@ import { Hero } from "../components/Hero.jsx";
 import { Navbar } from "../components/Navbar.jsx";
 import { Features1 } from "../components/Features1.jsx";
 import { Features2 } from "../components/Features2.jsx";
-import { Testimonials } from "../components/Testimonials.jsx";
+import { Blogs } from "../components/Blogs.jsx";
 import { FeaturesDiagonal } from "../components/FeaturesDiagonal.jsx";
-import { Pricing } from "../components/Pricing.jsx";
-import { FAQ } from "../components/FAQ.jsx";
+import { Events } from "../components/Pricing.jsx";
+import { About } from "../components/About.jsx";
 import { Brands } from "../components/Brands.jsx";
 import { Divider } from "../components/Divider";
 import { Footer } from "../components/Footer.jsx";
 import { ScrollUpButton } from "../components/ScrollUpButton";
 import "../styles/Theme.css";
 import "../styles/Diagonals.css";
-
 ---
 
 <Layout title="Tailcast">
@@ -23,11 +22,11 @@ import "../styles/Diagonals.css";
   <Features1 client:load />
   <Divider />
   <Features2 client:load />
-  <Testimonials client:load />
+  <Blogs client:load />
   <FeaturesDiagonal client:load />
-  <Pricing client:load />
+  <Events client:load />
   <Brands client:load />
-  <FAQ client:load />
+  <About client:load />
   <Footer />
   <ScrollUpButton client:load />
 </Layout>
