--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import "../styles/Theme.css";
 import "../styles/Diagonals.css";
 ---
 
-<Layout title="Tailcast">
+<Layout title="ZHCET Code OaSiS">
   <Navbar client:load />
   <Hero client:load />
   <Features1 client:load />
