scrolling for contributors

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import { Blogs } from "../components/Blogs.jsx";
 import { FeaturesDiagonal } from "../components/FeaturesDiagonal.jsx";
 import { Events } from "../components/Pricing.jsx";
 import { About } from "../components/About.jsx";
-import { Brands } from "../components/Brands.jsx";
+import { Contributors } from "../components/Contributors.jsx";
 import { Divider } from "../components/Divider";
 import { Footer } from "../components/Footer.jsx";
 import { ScrollUpButton } from "../components/ScrollUpButton";
@@ -25,7 +25,7 @@ import "../styles/Diagonals.css";
   <Blogs client:load />
   <FeaturesDiagonal client:load />
   <Events client:load />
-  <Brands client:load />
+  <Contributors client:load />
   <About client:load />
   <Footer />
   <ScrollUpButton client:load />
