--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import { Features2 } from "../components/Features2.jsx";
 import { Blogs } from "../components/Blogs.jsx";
 import { FeaturesDiagonal } from "../components/FeaturesDiagonal.jsx";
 import { Events } from "../components/Pricing.jsx";
-import { About } from "../components/About.jsx";
+import { FAQs } from "../components/FAQs.jsx";
 import { Contributors } from "../components/Contributors.jsx";
 import { Divider } from "../components/Divider";
 import { Footer } from "../components/Footer.jsx";
@@ -26,7 +26,7 @@ import "../styles/Diagonals.css";
   <FeaturesDiagonal client:load />
   <Events client:load />
   <Contributors client:load />
-  <About client:load />
+  <FAQs client:load />
   <Footer />
   <ScrollUpButton client:load />
 </Layout>
