Commented events and contributors

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,8 +24,8 @@ import "../styles/Diagonals.css";
   <Features2 client:load />
   <Blogs client:load />
   <FeaturesDiagonal client:load />
-  <Events client:load />
-  <Contributors client:load />
+  <!-- <Events client:load /> -->
+  <!-- <Contributors client:load /> -->
   <FAQs client:load />
   <Footer />
   <ScrollUpButton client:load />
